# CloudEmulators

./: .gitignore  LICENSE  README.md  docker-compose.yml
clog/: CMakeLists.txt  vcpkg.json
clog/include/awsclogger/: IS3Congestion.hpp
clog/include/clog/: ICongestion.hpp  ICongestionStrategy.hpp  JitterCommands.hpp
clog/include/clog/aws/: IS3.hpp  S3.hpp  S3Congestion.hpp
clog/include/clog/aws_jitter/: DynamoDB.hpp  DynamoDBCongestion.hpp  DynamoDBDownloadCongestionStrategy.hpp  DynamoDBUploadCongestionStrategy.hpp  IDynamoDB.hpp  IS3.hpp  S3.hpp  S3Congestion.hpp
clog/include/clog/jitter_orchestrator/: AwsJitterFactory.hpp  IJitterCommand.hpp  IJitterFactory.hpp  JitterCommand.hpp  Scheduler.hpp
clog/src/: main.cpp
clog/src/clog/aws/: S3.cpp  S3Congestion.cpp
clog/src/clog/aws_jitter/: DynamoDB.cpp  DynamoDBCongestion.cpp  DynamoDBDownloadCongestionStrategy.cpp  DynamoDBUploadCongestionStrategy.cpp  S3.cpp  S3Congestion.cpp
clog/src/clog/jitter_orchestrator/: AwsJitterFactory.cpp  JitterCommand.cpp  Scheduler.cpp
terraform/aws/: main.tf
